prevent overflow x when chat is minimised.

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ h2, p {
 }
 
 #root {
+    overflow-x: hidden;
     width: 100%;
     height: 100%;
     flex: 1;
